--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,10 @@ python = "^3.9"
 rich = "^11"
 textual = "^0.1.15"
 aiofile = "^3.7.4"
+pyperclip = "^1.8.2"
 
 [tool.poetry.dev-dependencies]
+black = {version = "^22.1.0", allow-prereleases = true}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
